fix: do not stretch html tag to 100% height

--- a/src/main.css
+++ b/src/main.css
@@ -6,10 +6,11 @@
 
 *, *::before, *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-html {
-  height: 100%;
+html, body {
   color: $html-text-color;
   background-color: $html-bg-color;
   line-height: 1.5;
